--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script type="text/javascript" src="src/jquery-2.1.3.min.js"></script>
-<script type="text/javascript" src="src/mhub-dtree.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
+    <script type="text/javascript" src="js/d3.min.js"></script>
+    <script type="text/javascript" src="js/dagre-d3.min.js"></script>
 </head>
 <body>
+    <svg id="svg-canvas" width=1280 height=720></svg>
+
+    <script type="text/javascript" src="src/mhub-dtree.js"></script>
+    <script type="text/javascript" src="src/graph.js"></script>
 </body>
 </html>
