--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <script type="text/javascript" src="js/dagre-d3.min.js"></script>
     <script type="text/javascript" src="src/graph.js"></script>
     <script type="text/javascript" src="src/mhub-dtree.js"></script>
+    <script type="text/javascript">
+    init();
+    </script>
 </body>
 </html>
