--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="js/d3.min.js"></script>
     <script type="text/javascript" src="js/dagre-d3.min.js"></script>
     <script type="text/javascript" src="src/graph.js"></script>
+    <script type="text/javascript" src="src/secret.js"></script>
     <script type="text/javascript" src="src/mhub-dtree.js"></script>
 </body>
 </html>
