--- a/visualization.html
+++ b/visualization.html
@@ -20,13 +20,16 @@
     <!-- JS Files -->
     <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/d3.min.js"></script>
+    <script type="text/javascript" src="js/dagre-d3.min.js"></script>
+    <script type="text/javascript" src="src/graph.js"></script>
+    <script type="text/javascript" src="src/secret.js"></script>
+    <script type="text/javascript" src="src/interaction_tree.js"></script>
 
     <!-- Custom styles for this template -->
-    <link href="grid.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -113,6 +116,26 @@
         // };
         // google.visualization.events.addListener(chart, 'click', handler);
     }
+    var dataCallback = function(name, organization_id){
+        queryMissionHub('people', {'organization_id': organization_id, 'filters[name_like]': name}, function(json){
+            getInteractionTree(organization_id, json.people[0].id, 1, returnNames);
+        });
+    }
+
+    $(document).ready(function(){
+      $('#display_button').click(function(){
+        var dataToDisplay = []
+        var formElements = document.forms['form'].elements['name'].value;
+        var data2 = functiongetPersonInteractions(formElements, "941");
+        console.log(data2);
+        for (i = 0; i < data2.length; i++) {
+            dataToDisplay.push([data2[i], i, i, "Interactions", 5]);
+        }
+        console.log(dataToDisplay);
+      });
+    });
+
+
     </script>
   </head>
 
@@ -127,10 +150,12 @@
         <div class="col-md-3">
            <div>
             <div class="input-group">
-              <input type="text" class="form-control" placeholder="University">
+              <form id="form">
+              <input type="text" class="form-control" placeholder="Name" id="name">
               <span class="input-group-btn">
-                <button class="btn btn-default" type="button">Display!</button>
+              <button class="btn btn-default" type="button" id="display_button">Display!</button>
               </span>
+              </form>
             </div><!-- /input-group -->
           </div>
         </div>
@@ -160,6 +185,5 @@
 
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
