--- a/visualization.html
+++ b/visualization.html
@@ -125,7 +125,7 @@
             dataToDisplay.push([data2[i], i+1, i+1, "Interactions", 5]);
         }
         console.log(dataToDisplay);
-        var dataTable = google.visualization.arrayToDataTable(data2);
+        var dataTable = google.visualization.arrayToDataTable(dataToDisplay);
         console.log(dataTable);
         
       //   dataview = new google.visualization.DataView(data);
