--- a/visualization.html
+++ b/visualization.html
@@ -44,48 +44,48 @@
     google.setOnLoadCallback(drawSeriesChart);
 
     function drawSeriesChart() {
-      var data = google.visualization.arrayToDataTable([
-        ['ID', 'Days Since Last Interaction', '# of Interactions', 'Group',     'Size'],
-        ['Todd',    80,              5,      'Leader',  5],
-        ['Ethan',    23,              2,      'Leader',  5],
-        ['Ja-Hon',    1,              10,      'Community',    5],
-        ['Kate',    69,              1,       'Community',    5],
-        ['Annalee',    1,              4,      'Community',    5],
-        ['Dieter',    49,              2,         'Interactions',         5],
-        ['Jimmy',    63,              6,      'Interactions',    5],
-        ['Igor',    1,               3,      'Interactions',         5],
-        ['Mustafa',    43,              3,      'Interactions',         5],
-        ['Andy',    22,               2,      'Interactions',         5]
-      ]);
-      console.log(data);
-      var options = {
-        series: {
-            Leader: { color: '#e2431e' },
-            Community: { color: '#e7711b' },
-            Interactions: { color: '#f1ca3a' },
-        },
-        title: 'Asaph Yuan',
-        // explorer: { axis: 'horizontal', keepInBounds: true },
-        hAxis: {title: 'Days Since Last Interaction', viewWindowMode:'explicit',
-              viewWindow:{
-                max:100,
-                min:-8
-              }},
-        vAxis: {title: 'Number of Interactions', viewWindowMode:'explicit',
-              viewWindow:{
-                max:12,
-                min:0
-              }},
-        bubble: {textStyle: {fontSize: 11},
-          color: 'green',
-          textStyle: {
-            auraColor: 'none'
-      }}
+      // var data = google.visualization.arrayToDataTable([
+      //   ['ID', 'Days Since Last Interaction', '# of Interactions', 'Group',     'Size'],
+      //   ['Todd',    80,              5,      'Leader',  5],
+      //   ['Ethan',    23,              2,      'Leader',  5],
+      //   ['Ja-Hon',    1,              10,      'Community',    5],
+      //   ['Kate',    69,              1,       'Community',    5],
+      //   ['Annalee',    1,              4,      'Community',    5],
+      //   ['Dieter',    49,              2,         'Interactions',         5],
+      //   ['Jimmy',    63,              6,      'Interactions',    5],
+      //   ['Igor',    1,               3,      'Interactions',         5],
+      //   ['Mustafa',    43,              3,      'Interactions',         5],
+      //   ['Andy',    22,               2,      'Interactions',         5]
+      // ]);
+      // console.log(data);
+      // var options = {
+      //   series: {
+      //       Leader: { color: '#e2431e' },
+      //       Community: { color: '#e7711b' },
+      //       Interactions: { color: '#f1ca3a' },
+      //   },
+      //   title: 'Asaph Yuan',
+      //   // explorer: { axis: 'horizontal', keepInBounds: true },
+      //   hAxis: {title: 'Days Since Last Interaction', viewWindowMode:'explicit',
+      //         viewWindow:{
+      //           max:100,
+      //           min:-8
+      //         }},
+      //   vAxis: {title: 'Number of Interactions', viewWindowMode:'explicit',
+      //         viewWindow:{
+      //           max:12,
+      //           min:0
+      //         }},
+      //   bubble: {textStyle: {fontSize: 11},
+      //     color: 'green',
+      //     textStyle: {
+      //       auraColor: 'none'
+      // }}
 
-      };
+      // };
 
-      var chart = new google.visualization.BubbleChart(document.getElementById('series_chart_div') );
-      chart.draw(data, options);
+      // var chart = new google.visualization.BubbleChart(document.getElementById('series_chart_div') );
+      // chart.draw(data, options);
 
       function selectHandler() {
           var selectedItem = chart.getSelection()[0];
@@ -117,31 +117,31 @@
         // google.visualization.events.addListener(chart, 'click', handler);
     }
     var dataCallback = function(data2){
-      console.log('data');
-      console.log(data2);
+      // console.log('data');
+      // console.log(data2);
       dataToDisplay = [];
       dataToDisplay.push(['ID', 'Days Since Last Interaction', '# of Interactions', 'Group',     'Size']);
         for (i = 0; i < data2.length; i++) {
             dataToDisplay.push([data2[i], i+1, i+1, "Interactions", 5]);
         }
-        console.log(dataToDisplay);
+        // console.log(dataToDisplay);
         var dataTable = google.visualization.arrayToDataTable(dataToDisplay);
-        console.log(dataTable);
+        // console.log(dataTable);
         
       //   dataview = new google.visualization.DataView(data);
-      var data = google.visualization.arrayToDataTable([
-        ['ID', 'Days Since Last Interaction', '# of Interactions', 'Group',     'Size'],
-        ['Todd',    80,              5,      'Leader',  5],
-        ['Ethan',    23,              2,      'Leader',  5],
-        ['Ja-Hon',    1,              10,      'Community',    5],
-        ['Kate',    69,              1,       'Community',    5],
-        ['Annalee',    1,              4,      'Community',    5],
-        ['Dieter',    49,              2,         'Interactions',         5],
-        ['Jimmy',    63,              6,      'Interactions',    5],
-        ['Igor',    1,               3,      'Interactions',         5],
-        ['Mustafa',    43,              3,      'Interactions',         5],
-        ['Bob',    22,               2,      'Interactions',         5]
-      ]);
+      // var data = google.visualization.arrayToDataTable([
+      //   ['ID', 'Days Since Last Interaction', '# of Interactions', 'Group',     'Size'],
+      //   ['Todd',    80,              5,      'Leader',  5],
+      //   ['Ethan',    23,              2,      'Leader',  5],
+      //   ['Ja-Hon',    1,              10,      'Community',    5],
+      //   ['Kate',    69,              1,       'Community',    5],
+      //   ['Annalee',    1,              4,      'Community',    5],
+      //   ['Dieter',    49,              2,         'Interactions',         5],
+      //   ['Jimmy',    63,              6,      'Interactions',    5],
+      //   ['Igor',    1,               3,      'Interactions',         5],
+      //   ['Mustafa',    43,              3,      'Interactions',         5],
+      //   ['Bob',    22,               2,      'Interactions',         5]
+      // ]);
 
       var options = {
         series: {
@@ -170,7 +170,7 @@
       };
 
       var chart = new google.visualization.BubbleChart(document.getElementById('series_chart_div') );
-        chart.draw(data, options);
+        chart.draw(dataTable, options);
     }
 
     $(document).ready(function(){
